<resources>
    <string name="swith_button1">&#xe622;</string>
    <string name="swith_button2">&#xe674;</string>
    <string name="swith_button6">&#xe631;</string>
    <string name="swith_button3">&#xe750;</string>
    <string name="swith_button4">&#xe633;</string>
    <string name="swith_button5">&#xe623;</string>
    <string name="app_name">e族防水</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_find_person">FindPersonActivity</string>
    <string name="title_activity_advice_feedback">AdviceFeedbackActivity</string>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="title_activity_my_attention">MyAttentionActivity</string>
    <string name="title_activity_my_find_person">MyFindPersonActivity</string>
    <string name="title_activity_worker_detail">WorkerDetailActivity</string>
    <string name="title_activity_my_points">MyPointsActivity</string>
    <string name="title_activity_my_information">MyInformationActivity</string>
    <string name="title_activity_my_identity">MyIdentityActivity</string>
    <string name="title_activity_is_worker">IsWorkerActivity</string>
    <string name="title_activity_is_material">IsMaterialActivity</string>
    <string name="title_activity_is_boss">IsBossActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_my_orders">MyOrdersActivity</string>
    <string name="title_activity_evaluate_worker">EvaluateWorkerActivity</string>
    <string name="title_activity_evaluate_boss">EvaluateBossActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_my_relase">MyRelaseActivity</string>
    <string name="title_activity_get_auth_code">GetAuthCodeActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="title_activity_professional_skill">ProfessionalSkillActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="title_activity_upload_voucher">UploadVoucherActivity</string>
    <string name="title_activity_send_project">SendProjectActivity</string>
    <string name="title_activity_find_fund">FindFundActivity</string>
    <string name="title_activity_find_qualifications">FindQualificationsActivity</string>
    <string name="title_activity_worker_project_photo">WorkerProjectPhotoActivity</string>
    <string name="title_activity_call_waiting">CallWaiting</string>
    <string name="title_activity_show_map_address">ShowMapAddressActivity</string>
    <string name="title_activity_my_release_project_detail">MyReleaseProjectDetailActivity</string>
    <string name="title_activity_fifth_my_message">FifthMyMessageActivity</string>
    <string name="title_activity_system_message">SystemMessageActivity</string>
    <string name="WorkMessage">用工信息</string>
    <string name="UserPhoto">头像</string>
    <string name="NickName">昵称</string>
    <string name="InputNickName">请输入昵称</string>
    <string name="Loading">正在加载,请稍后</string>
    <string name="Cleanile">正在清除缓存,请稍候..</string>
    <string name="Uploading">正在上传,请稍后</string>
    <string name="NetworkErrors">网络错误</string>
    <string name="LinkNetwork">请连接网络</string>
    <string name="Yes">是</string>
    <string name="No">否</string>
    <string name="Hint">提示</string>
    <string name="Toll_FreeCall">是否呼叫此用户(本次通话免费)</string>
    <string name="delete_info">是否删除这条消息</string>
    <string name="TimeRemaining">当月剩余通话时间为</string>
    <string name="Minute">分钟</string>
    <string name="Least_One_Star">最少评价一颗星哦~</string>
    <string name="Select_City">请选择城市</string>
    <string name="Input_Sum">请输入您需要的资金额度</string>
    <string name="Select_Release_Site">请选择发布地点</string>
    <string name="Input_Detail_Site">请输入详细地址</string>
    <string name="Input_Name">请输入您的姓名</string>
    <string name="Input_Phone">请输入您的手机号</string>
    <string name="Ten_Thousand">万元</string>
    <string name="Parameter_Not_Null">用工地点不能为空</string>
    <string name="Year">年</string>
    <string name="Month">月</string>
    <string name="Day">日</string>
    <string name="Start_Time">(开始时间)</string>
    <string name="End_Time">(结束时间)</string>
    <string name="Date_Layout">yyyy年MM月dd日</string>
    <string name="Endtime_Than_Starttime">结束时间不能小于开始时间</string>
    <string name="Please_Input_Contacts">请输入联系人</string>
    <string name="Input_Number_Error">输入号码有误</string>
    <string name="Please_Input_Need_Number">请输入用工人数</string>
    <string name="Please_Input_Project_Name">请输入项目名称</string>
    <string name="Start_Work_Time">(开工时间)</string>
    <string name="Please_Choose_YongGong_Start_Time">请选择用工开始时间</string>
    <string name="Please_Choose_YongGong_End_Time">请选择用工结束时间</string>
    <string name="Please_Choose_Profession_Skill">请选择专业技能</string>
    <string name="Please_Input_Worker_Experience">请输入需要工人的经验年限</string>
    <string name="Please_Write_Detailed_Address">请填写详细地址</string>
    <string name="Please_Input_YongGong_Place">请输入用工地点</string>
    <string name="Please_Choose_City">请选择城市</string>
    <string name="Images_has_Uploading_suceessful">张图片已成功上传</string>
    <string name="Please_Input_Identity_Code">请输入您的身份证号</string>
    <string name="Provide_Insurance">您是否提供保险</string>
    <string name="Provide_Contract">您是否提供用工合同</string>
    <string name="Pass_Check_Not_Again">您的身份审核已通过,请勿再次提交</string>
    <string name="Have">有</string>
    <string name="None">无</string>
    <string name="Check_Authentication_Info_Full">请您检查认证信息是否填写完整</string>
    <string name="Again_Authentication">请重新认证</string>
    <string name="Certificate_Uploading_Successful">证件上传成功</string>
    <string name="Please_Input_Real_Name">请输入您的真实姓名</string>
    <string name="Identity_Input_Error">身份证输入有误</string>
    <string name="Please_Company_Name">请输入您的公司名称</string>
    <string name="Identity_Not_Null">身份证不能为空</string>
    <string name="Please_Input_Job_Experience">请输入您的工作经验</string>
    <string name="Weather_Have_Insurance">您是否有保险</string>
    <string name="Identity_Photo_Not_Null">身份证照片不能为空</string>
    <string name="Has_Authentication">已认证</string>
    <string name="Real_Name">真实姓名</string>
    <string name="Job_Experience">工作经验</string>
    <string name="Phone_Number">手机号码</string>
    <string name="Has_Uploading_Successful">已成功上传</string>
    <string name="Phone_Number_Error">手机号码格式错误</string>
    <string name="Input_Password">请输入密码</string>
    <string name="You_Have_Not_Login_Weather_Login">您还没有登录!是否登录</string>
    <string name="Your_Current_City_Is">您当前的城市是\'</string>
    <string name="Wheather_Switch_City">\',是否切换城市?</string>
    <string name="Locate_City_Tips">定位城市提示</string>
    <string name="Again_Pressed_Exit_Program">再按一次退出程序</string>
    <string name="Wheather_Chat_Deal">是否谈好成交 ?</string>
    <string name="Wheather_Delete_Information">确定要删除该信息么?</string>
    <string name="Wheather_End_Order">是否结束订单?</string>
    <string name="Start_Work">开工</string>
    <string name="In_The_Review">您有身份正在审核, 请审核通过后再重试</string>
    <string name="Input_Contacts_Name">请输入联系人姓名</string>
    <string name="Choose_Sex">请选择性别</string>
    <string name="Choose_Birthday">选择生日</string>
    <string name="Man">男</string>
    <string name="Women">女</string>
    <string name="Real_Name_Not_Null">真实姓名不能为空</string>
    <string name="Phone_Not_Null">号码不能为空</string>
    <string name="Detail_Site_Not_Null">详细地址不能为空</string>
    <string name="Contacts_Name_Not_Null">联系人姓名不能为空</string>
    <string name="Point">" 分"</string>
    <string name="Mystery_Men">神秘人</string>
    <string name="Lack_Parame_Login_Again">缺少参数,请重新登录</string>
    <string name="Share">的分享</string>
    <string name="Share_Successful">" 分享成功啦"</string>
    <string name="Share_Defeat">" 分享失败啦"</string>
    <string name="Share_Cancel">" 分享取消了"</string>
    <string name="More_Platform_Share">多平台分享</string>
    <string name="Find_People_List">找人单子</string>
    <string name="Work_List">干活单子</string>
    <string name="Recruit_List">招工单子</string>
    <string name="SBS_Waterproof">SBS防水卷材施工</string>
    <string name="ZiZhan_Waterproof">自粘卷材施工</string>
    <string name="Rubber_Waterproof">橡胶共混卷材施工</string>
    <string name="Coating_Waterproof">涂料类防水材料施工</string>
    <string name="Polyethylene_Polypropylene_Waterproof">聚乙烯丙纶类材料施工</string>
    <string name="PVC_Waterproof">氯化聚乙烯pvc材料施工</string>
    <string name="Polymer_Waterproof">高分子卷材类材料施工</string>
    <string name="FanZhan_Waterproof">预铺反粘类材料施工</string>
    <string name="DuLou_Waterproof">注浆堵漏类防水施工</string>
    <string name="Not_Login_Go_Login">您还没有登陆是否去登陆</string>
    <string name="Registering">正在注册请稍候</string>
    <string name="Send_Verification_Code">正在发送验证码</string>
    <string name="Input_Verification_Code">请输入验证码</string>
    <string name="Verification_Code_Error">验证码错误</string>
    <string name="Input_Register_Password">请输入注册密码</string>
    <string name="Password_Easy">密码过于简单</string>
    <string name="Seconds">秒</string>
    <string name="Again_Get_Verification_Code">再次获取验证码</string>
    <string name="Verification_Code_Format_Error">验证码格式错误</string>
    <string name="Password_Not_Same">密码输入不一致</string>
    <string name="Reset_Password_Successful">密码重置成功请重新登录</string>
    <string name="HangZhou_City">杭州市</string>
    <string name="Parame_Error">参数错误</string>
    <string name="Location">定位</string>
    <string name="Hot">热门</string>
    <string name="All">全部</string>
    <string name="ShangHai_City">上海市</string>
    <string name="BeiJing_City">北京市</string>
    <string name="GuangZhou_City">广州市</string>
    <string name="ShenZheng_City">深圳市</string>
    <string name="WuHan_City">武汉市</string>
    <string name="TianJing_City">天津市</string>
    <string name="XiAn_City">西安市</string>
    <string name="NanJing_City">南京市</string>
    <string name="ChengDu_City">成都市</string>
    <string name="ChongQin_City">重庆市</string>
    <string name="Choose_Contracting_Mode">请选择承包模式</string>
    <string name="Please_Enter_The_Construction_Area">请输入建筑面积</string>
    <string name="Choose_Project_Place">请选择项目地点</string>
    <string name="Clear_Bag">清包</string>
    <string name="Big_Bag">大包</string>
    <string name="General_Contracting">总承包</string>
    <string name="Wheather_Exit_Login">确定是否退出登录!</string>
    <string name="Project_Position">工程位置:</string>
    <string name="Photo_Not_Completed">您还没有拍完</string>
    <string name="Login_More_Than_Time">长时间未登录,请重新登录</string>
    <string name="Ensure_Delete_Project_Photo">您确定要删除工程图?</string>
    <string name="Have_Completed">已完成</string>
    <string name="Kilometer">公里</string>
    <string name="Meter">米</string>
    <string name="Year_Work_Experience">年工作经验</string>
    <string name="None_Work_Experience">无工作经验</string>
    <string name="Age">岁</string>
    <string name="State_Free">状态:空闲</string>
    <string name="State_Busy">状态:繁忙</string>
    <string name="Unknown">未知</string>
    <string name="Find_Work">找活</string>
    <string name="Find_People">找人</string>
    <string name="People">人</string>
    <string name="Get_Integral">获得积分</string>
    <string name="Brower_Count">浏览次数:</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_find_material">FindMaterialActivity</string>
    <string name="title_activity_shopping_mall">ShoppingMallActivity</string>
    <string name="title_activity_gift">GiftActivity</string>
</resources>